# MTG-Engine

./: AXIS2_DEEP_DIVE_ANALYSIS.md  AXIS2_ISSUES_AND_IMPROVEMENTS.md  Structure.md  docker-compose.yml  pyproject.toml
deprecated/axis2/: plan.md  schema.py  validation.py
deprecated/axis3/: Structure.md
deprecated/tests/: test_ability_boundaries.py  test_axis1_mapping.py  test_axis2_regression_all.py  test_axis3_casting.py  test_axis3_controller.py  test_axis3_drawing.py  test_axis3_integration.py  test_axis3_random_card.py  test_axis3_stack.py
docker/: Dockerfile.api  init.sql  migrate_custom_lists.sql
frontend/: .dockerignore  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/context/: AuthContext.tsx  SidebarContext.tsx  ThemeContext.tsx
frontend/hooks/: useAbilityGraphs.ts  useCastContext.ts  useCasting.ts  useCombatSelection.ts  useEngineActions.ts  useGameSetup.ts  useReplacementConflicts.ts  useTargeting.ts  (+3 more)
scripts/: import_all_cards.py  seed_keywords.py
src/: main.py
tests/: conftest.py  test_axis2_builder.py  test_axis2_costs.py  test_axis2_debug.py  test_axis2_effects.py  test_axis2_layers.py  test_axis2_permissions.py  test_axis2_random_card.py  test_axis2_random_card_debug.py  test_axis2_restrictions.py  test_axis2_targeting.py  test_axis2_timing.py  test_axis3_combat.py  test_axis3_drawing.py  test_axis3_integration.py  test_axis3_layers.py  test_axis3_replacement.py  test_axis3_sba.py  test_axis3_triggers.py  test_repository.py  test_scryfall_client.py
(+703 files in other folders)
