[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mtg-engine"
version = "0.1.0"
description = "MTG Engine with Scryfall integration and Axis1 mapping"
authors = [
    { name = "Jonasi" }
]
requires-python = ">=3.12"

dependencies = [
    "fastapi==0.115.0",
    "uvicorn[standard]==0.30.0",
    "requests==2.32.3",
    "pydantic==2.8.2",
    "pydantic-settings==2.3.4",
    "pydantic[email]==2.8.2",
    "SQLAlchemy==2.0.32",
    "psycopg2-binary==2.9.11",
    "python-dotenv==1.0.1",
    "passlib[bcrypt]==1.7.4",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.2",
    "pytest-asyncio==0.23.7",
    "coverage==7.6.1",
]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["*"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
